--- a/home.html
+++ b/home.html
@@ -17,7 +17,8 @@
     </div>
     <div class="buttons">
     <button class="button">Login</button>
-    <button class="button">Sign Up</button>
+    <a href="signup.html">
+    <button class="button">Sign Up</button></a>
     </div>
 </header>
 <section>
@@ -28,16 +29,16 @@
     
 </nav>
 <section>
-
-<nav>
+<nav class="imagenav">
     <li><img src="img/pic1.jpg"></li>
     <li><img src="img/pic2.jpg"></li>
     <li><img src="img/pic3.jpg"></li>
 </nav>
-
 </section>
+<div>
 <footer>
 <p> Diagnostics Lab</p>
 </footer>
+</div>
 </body>
 </html>
