--- a/login.html
+++ b/login.html
@@ -17,7 +17,8 @@
 	</div>
 	<div class="buttons">
 	<button class="button">Login</button>
-	<button class="button">Sign Up</button>
+	<a href="signup.html">
+	<button class="button">Sign Up</button></a>
 	</div>
 </header>
 <section>
