--- a/login.html
+++ b/login.html
@@ -31,13 +31,13 @@
 <aside class="asideclass">
 <div>
 <label>
-UserName:
-<input type="text" name="Name" placeholder="UserName">
+UserName<sup>*</sup>
+<input type="text" name="Name" placeholder="UserName" required>
 </label>
 </div>
 <div>
-<label>Password:
-	<input type="password" name="password" placeholder="Password">
+<label>Password<sup>*</sup>
+	<input type="password" name="password" placeholder="Password" required>
 </label>
 </div>
 <button class="button" type="submit">Login</button>
