--- a/signup.html
+++ b/signup.html
@@ -7,20 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="signuppadding">
-    <header>
-        <div class="logo">
-            <img class="img" src="img/Icon.jpg">
-        </div>
-        <div>
-            <h1 class="header">Diagnostics Lab</h1>
-            <h2 class="header">Sub Header</h2>
-        </div>
-        <div class="buttons">
-            <button class="button">Login</button>
-            <button class="button">Sign Up</button>
-        </div>
-    </header>
+<body class="padding">
+<header>
+	<div class="logo">
+	<img class="img" src="img/Icon.jpg">
+	</div>
+	<div >
+	<h1 class="header">Diagnostics Lab</h1>
+	<h2 class="header">Sub Header</h2>
+	</div>
+	<div class="buttons">
+	<a href="login.html">
+	<button class="button">Login</button></a>
+	
+	<button class="button">Sign Up</button>
+	</div>
+</header>
     <section>
         <div class="runner">
         </div>
@@ -50,7 +52,7 @@
                             <input type="text" name="username" id="username" placeholder="username" class="textbox" required/>
                         </div>
                         <div>
-                            <label>PassWord<sup>*</sup></label>
+                            <label>Password<sup>*</sup></label>
                             <br>
                             <input type="password" name="password" id="password" placeholder="Password" class="textbox" required/>
                         </div>
