--- a/CreatingTestCase.html
+++ b/CreatingTestCase.html
@@ -25,19 +25,20 @@
 <div class="runner">
 </div>
 </section>
-<nav>
+<nav class="navigation">
+<ul>
+<li>Register New Patient</li>
+<li>View Test Result</li>
+<li>Enter Test Result</li>
+<li>Order New Test</li>
+</ul>
 </nav>
-<section>
-<nav class="imagenav">
-    <li><img src="img/pic1.jpg"></li>
-    <li><img src="img/pic2.jpg"></li>
-    <li><img src="img/pic3.jpg"></li>
-</nav>
+<section class="testcasedisplay">
+
 </section>
-<div>
+
 <footer>
 <p> Diagnostics Lab</p>
 </footer>
-</div>
 </body>
 </html>
