--- a/patientDashboard.html
+++ b/patientDashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>DiagnosticsLab</title>
-        <link rel="stylesheet" href="stylesheet_changed.css" />
+        <link rel="stylesheet" href="stylesheet.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
