--- a/patientView.html
+++ b/patientView.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>DiagnosticsLab</title>
-        <link rel="stylesheet" href="stylesheet1.css" />
+        <link rel="stylesheet" href="stylesheet.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
