Creating Template for tech view

--- a/CreatingTestCase.html
+++ b/CreatingTestCase.html
@@ -16,9 +16,8 @@
     <h2 class="header">Sub Header</h2>
     </div>
     <div class="buttons">
-    <button class="button">Login</button>
-    <a href="signup.html">
-    <button class="button">Sign Up</button></a>
+    <a href="login.html">
+    <button class="button">Log Out</button></a>
     </div>
 </header>
 <section>
