Fixing the tech view pages

--- a/CreatingTestCase.html
+++ b/CreatingTestCase.html
@@ -24,18 +24,21 @@
 <div class="runner">
 </div>
 </section>
+<section class="contents">
 <nav class="navigation">
 <ul>
-<li>Register New Patient</li>
-<li>View Test Result</li>
-<li>Enter Test Result</li>
-<li>Order New Test</li>
+<li><a href="tech-viewhome.html">Home</li>
+<li><a href="Registernewpatient.html">Register New Patient</a></li>
+<li><a href="viewTestResult.html">View Test Result</a></li>
+<li><a href="entertestresult.html">Enter Test Result</a></li>
+<li><a href="CreatingTestCase.html">Order New Test</a></li>
 </ul>
 </nav>
-<section class="testcasedisplay">
+<section>
+<!-- write the code here -->
 
 </section>
-
+</section>
 <footer>
 <p> Diagnostics Lab</p>
 </footer>
