--- a/entertestresult.html
+++ b/entertestresult.html
@@ -34,13 +34,8 @@
 <li><a href="CreatingTestCase.html">Order New Test</a></li>
 </ul>
 </nav>
-<section class="techcontents">
-	<ul>
-<li><a href="Registernewpatient.html">Register New Patient</a></li>
-<li><a href="viewTestResult.html">View Test Result</a></li>
-<li><a href="entertestresult.html">Enter Test Result</a></li>
-<li><a href="CreatingTestCase.html">Order New Test</a></li>
-</ul>
+<section>
+<!-- write code here -->
 
 </section>
 </section>
