--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 </section>
 <nav>
 </nav>
-<section>
+<section class="">
 <nav class="imagenav">
     <li><img src="img/pic1.jpg"></li>
     <li><img src="img/pic2.jpg"></li>
