--- a/Registernewpatient.html
+++ b/Registernewpatient.html
@@ -34,7 +34,7 @@
 <li><a href="CreatingTestCase.html">Order New Test</a></li>
 </ul>
 </nav>
-<section>
+<section class="techcontents">
 <!-- write the code here -->
 
 </section>
