--- a/entertestresult.html
+++ b/entertestresult.html
@@ -34,7 +34,7 @@
 <li><a href="CreatingTestCase.html">Order New Test</a></li>
 </ul>
 </nav>
-<section>
+<section class="techcontents">
 <!-- write code here -->
 
 </section>
