Did Registernewpatient.html and final stylesheet.css

--- a/Registernewpatient.html
+++ b/Registernewpatient.html
@@ -27,15 +27,30 @@
 <section class="contents">
 <nav class="navigation">
 <ul>
-<li><a href="tech-viewhome.html">Home</li>
-<li><a href="Registernewpatient.html">Register New Patient</a></li>
-<li><a href="viewTestResult.html">View Test Result</a></li>
-<li><a href="entertestresult.html">Enter Test Result</a></li>
-<li><a href="CreatingTestCase.html">Order New Test</a></li>
+<li><a  href="tech-viewhome.html">Home</li>
+<li><a  href="Registernewpatient.html">Register New Patient</a></li>
+<li><a  href="viewTestResult.html">View Test Result</a></li>
+<li><a  href="entertestresult.html">Enter Test Result</a></li>
+<li><a  href="CreatingTestCase.html">Order New Test</a></li>
 </ul>
 </nav>
 <section class="techcontents">
 <!-- write the code here -->
+ <form id="registerForm" action="userCreated.html">
+        <label class="inputField">PatientId</label><input type="text" class="inputBox" placeholder="Patient Id"><br>
+        <label class="inputField">Patient First Name</label><input type="text" class="inputBox" placeholder="Patient First Name"><br>
+        <label class="inputField">Patient Last Name</label><input type="text" class="inputBox" placeholder="Patient Last Name"><br>
+        <label class="inputField">Age</label><input type="text" class="inputBox" placeholder="Age"><br>
+        <label class="inputField">Gender</label><input type="text" class="inputBox" placeholder="Gender"><br>
+        <label class="inputField">Address</label><input type="text" class="inputBox" placeholder="Address"><br>
+        <label class="inputField">Doctor Referred By</label><input type="text" class="inputBox" placeholder="Doctor Referred By"><br>
+        <label class="inputField">Email ID</label><input type="text" class="inputBox" placeholder="Email ID"><br>
+        <label class="inputField">Phone Number</label><input type="text" class="inputBox" id="last" placeholder="Phone Number"><br>
+        
+        <button class="registerButton" id="leftButton">Reset</button>
+        <input class="registerButton" type="submit" value="Create">
+        <button class="registerButton">Next</button>
+       </form>
 
 </section>
 </section>
