used util.js file and changed button style

--- a/Registernewpatient.html
+++ b/Registernewpatient.html
@@ -4,6 +4,8 @@
 	<title>DiagnosticsLab</title>
 	    <link rel="stylesheet" href="stylesheet.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="js/util.js"></script>
 
 </head>
 <body class="padding">
@@ -47,13 +49,22 @@
         <label class="inputField">Email ID</label><input type="text" class="inputBox" placeholder="Email ID"><br>
         <label class="inputField">Phone Number</label><input type="text" class="inputBox" id="last" placeholder="Phone Number"><br>
         
-        <button class="registerButton" id="leftButton">Reset</button>
+      <!--   <button class="registerButton" id="leftButton">Reset</button>
         <input class="registerButton" type="submit" value="Create">
-        <button class="registerButton">Next</button>
+        <button class="registerButton">Next</button> -->
        </form>
+       <div class="buttonContainer">
+        <button class="ripple button" id="reset">Reset</button>
+        <button class="ripple button">Create</button>
+        <button class="ripple button">Next</button>
+    </div>
 
 </section>
+
 </section>
+<aside>
+    
+</aside>
 <footer>
 <p>	Diagnostics Lab</p>
 </footer>
