--- a/entertestresult.html
+++ b/entertestresult.html
@@ -4,6 +4,8 @@
 	<title>DiagnosticsLab</title>
 	    <link rel="stylesheet" href="stylesheet.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="js/util.js"></script>
 
 </head>
 <body class="padding">
