--- a/viewTestResult.html
+++ b/viewTestResult.html
@@ -1,48 +1,158 @@
 <!Doctype html>
 <html>
+
 <head>
-	<title>DiagnosticsLab</title>
-	    <link rel="stylesheet" href="stylesheet.css" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="js/util.js"></script>
-
+    <title>DiagnosticsLab</title>
+    <link rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/util.js"></script>
 </head>
-<body class="padding">
-<header>
-	<div class="logo">
-	<img class="img" src="img/Icon.jpg">
-	</div>
-	<div >
-	<h1 class="header">Diagnostics Lab</h1>
-	<h2 class="header">Sub Header</h2>
-	</div>
-	<div class="buttons">
-	<a href="login.html">
-	<button class="button">Log Out</button></a>
-	</div>
-</header>
-<section>
-<div class="runner">
-</div>
-</section>
-<section class="contents">
-<nav class="navigation">
-<ul>
-<li><a href="tech-viewhome.html">Home</li>
-<li><a href="Registernewpatient.html">Register New Patient</a></li>
-<li><a href="viewTestResult.html">View Test Result</a></li>
-<li><a href="entertestresult.html">Enter Test Result</a></li>
-<li><a href="CreatingTestCase.html">Order New Test</a></li>
-</ul>
-</nav>
-<section class="techcontents">
-<!-- write the code here -->
 
-</section>
-</section>
-<footer>
-<p>	Diagnostics Lab</p>
-</footer>
+<body class="padding">
+    <header>
+        <div class="logo">
+            <img class="img" src="img/Icon.jpg">
+        </div>
+        <div>
+            <h1 class="header">Diagnostics Lab</h1>
+            <h2 class="header">Sub Header</h2>
+        </div>
+        <div class="buttons">
+            <a href="login.html">
+                <button class="button">Log Out</button>
+            </a>
+        </div>
+    </header>
+    <section>
+        <div class="runner">
+        </div>
+    </section>
+    <section class="contents">
+        <nav class="navigation">
+            <ul>
+                <li><a href="tech-viewhome.html">Home</li>
+<li><a href="Registernewpatient.html">Register New Patient</a></li>
+                <li><a href="viewTestResult.html">View Test Result</a></li>
+                <li><a href="entertestresult.html">Enter Test Result</a></li>
+                <li><a href="CreatingTestCase.html">Order New Test</a></li>
+            </ul>
+        </nav>
+        <section class="techcontents">
+            <div id="error" class="errortext"></div>
+            <div class="paitentInfo">
+                <label>Patient ID:<sup>*</sup>
+                    <input id="patientID" placeholder="xxxxxx" required>
+                </label>
+                <button id="search" onclick="clicked()">search</button>
+            </div>
+            <div id="layouthidden">
+            <div class="tableDiv">
+                <table id="searchResult" class="newtable">
+                    <tr>
+                        <th>Test Cases</th>
+                    </tr>
+                </table>
+            </div>
+            </div>
+            <div class="buttonContainer" id="buttonContainer">
+                <button class="button centeralign" id="reset">Reset</button>
+                <button class="button centeralign" id="create" onclick="viewclicked()">View</button>
+            </div>
+        </section>
+    </section>
+    <aside>
+    </aside>
+    <footer>
+        <p> Diagnostics Lab</p>
+    </footer>
+    <script>
+    document.getElementById("searchResult").style.visibility = "hidden";
+    var test = {
+        "testcase": [{
+            "testname": "Blood Test"
+        }, {
+            "testname": "Urine Test"
+        }, {
+            "testname": "White Blood Cells Test"
+        }, {
+            "testname": "Culture Test"
+        }, {
+            "testname": "1 hour Glucose Test"
+        }, {
+            "testname": "3 hours Glucose Test"
+        }]
+    };
+var selected=false;
+    var text = test.testcase;
+
+    function clicked() {
+        var patientID, testcase;
+        patientID = document.getElementById("patientID");
+
+        if (patientID.value === "") {
+            document.getElementById("error").innerHTML = "Enter patientID";
+            addClass("#patientID", 'error');
+        } else {
+            removeClass("#patientID", 'error');
+            document.getElementById('error').innerHTML = "";
+            myFunction();
+        }
+    };
+
+    function viewclicked() {
+    	if(selected){
+        window.location.href = 'testview.html';
+    }else{
+    	$('#error').html="Please Set the Test Case";
+    }
+    };
+
+    function myFunction() {
+        document.getElementById("searchResult").style.visibility = "visible";
+        text.forEach(function(i) {
+            var table = document.getElementById("searchResult");
+            console.log(i.testname);
+            var newrow = table.insertRow(1);
+            var cell = newrow.insertCell(0);
+            // cell.innerHTML = text[i.testname];
+            cell.innerHTML = i.testname;
+            // cell.className="dynamic";
+            console.log(text[i.testname]);
+        });
+    }
+    $(document).ready(function() {
+        // alert("jquery load");
+        var table = $('#searchResult');
+        $("#searchResult tbody").delegate('tr', 'click', function(event) {
+var current=$(this).addClass('selected');
+        	$(this).parent("tbody").find("tr").removeClass('selected')
+        	current.parent("tbody").find("tr").removeClass('selected')
+        	$(this).addClass('selected');
+        	selected=true;
+        });
+
+        $("#reset").click(function() {
+            $('#searchResult').css('visibility', 'hidden');
+$('buttonContainer').css('visibility', 'hidden');
+            $('#patientID').val('')
+            selected=false;
+        });
+
+        $('#search').click(function(event) {
+            var id = $('#PatientID').val();
+            if (id == "") {
+                event.preventDefault();
+                $("#error").html("Please Enter the Patient Id to View Test Results");
+                return;
+            } else {
+            $('#layouthidden').css('visibility', 'visible');
+            }
+        });
+    });
+    </script>
+    <script type="text/javascript" src="js/lib.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </body>
+
 </html>
