complete tech view flow

--- a/enteringtestresult.html
+++ b/enteringtestresult.html
@@ -39,11 +39,9 @@
         </nav>
         <section class="techcontents">
             <form>
-            <label>
                 Patient ID:
-                <input type="text" name="PatientID" value="john" readonly></label>
-                <label> Report ID:
-                <input type="text" name="ReportID" value="xxxxuuu" readonly></input></label>
+                <input type="text" name="PatientID"> Report ID:
+                <input type="text" name="ReportID">
                 <br>
             </form>
             <div style="clear: both;"></div>
@@ -60,28 +58,33 @@
                 </tr>
                 <tr>
                     <td>Test 1</td>
-                    <td><input type="text" placeholder="normal value" id="test1" class="input" readonly></td>
+                    <td><input type="text" placeholder="normal value" id="test1" class="input"></td>
                     <td><input type="text" placeholder="normal value" id="normalvalue1" class="input" readonly></td>
                 </tr>
                 <tr>
                     <td>Test 2</td>
-                    <td><input type="text" placeholder="normal value" id="test2" class="input" readonly></td>
+                    <td><input type="text" placeholder="normal value" id="test2" class="input"></td>
                     <td><input type="text" placeholder="normal value" id="normalvalue2" class="input" readonly></td>
                 </tr>
                 <tr>
                     <td>Test 3</td>
-                    <td><input type="text" placeholder="normal value" id="test3" class="input" readonly></td>
+                    <td><input type="text" placeholder="normal value" id="test3" class="input"></td>
                     <td><input type="text" placeholder="normal value" id="normalvalue3" class="input" readonly></td>
                 </tr>
                 <tr>
                     <td>Test 4</td>
-                    <td><input type="text" placeholder="normal value" id="test4" class="input" readonly></td>
+                    <td><input type="text" placeholder="normal value" id="test4" class="input"></td>
                     <td><input type="text" placeholder="normal value" id="normalvalue4" class="input" readonly></td>
                 </tr>
             </table>
         </div class="buttons">
-            <button type="button" class="buttont spacing" onclick="window.history.go(-1); return false;">Back</button>
-            <button type="button" class="buttont spacing" >Download</button>
+            <button type="button" class="buttont spacing">Reset</button>
+            <a href="testview.html">
+            <button type="button" class="buttont spacing" >Preview</button></a>
+            <a href="testview.html">
+            <button type="button" class="buttont spacing" >Save</button></a>
+             <a href="entertestresult.html">
+             <button type="button" class="buttont spacing">Back</button></a>
         </section>
     </section>
     <footer>
