--- a/entertestresult.html
+++ b/entertestresult.html
@@ -16,7 +16,6 @@
         </div>
         <div>
             <h1 class="header">Diagnostics Lab</h1>
-            <h2 class="header">Sub Header</h2>
         </div>
         <div class="buttons">
             <a href="login.html">
@@ -39,54 +38,131 @@
             </ul>
         </nav>
         <section class="techcontents">
-            <form>
-                Patient ID:
-                <input type="text" name="PatientID"> Report ID:
-                <input type="text" name="ReportID">
-                <br>
-            </form>
-            <div style="clear: both;"></div>
-            <br>
-            <div id="words">
-                <h1>Test Report</h1>
+            <div id="error" class="errortext"></div>
+            <div class="paitentInfo">
+                <label>Patient ID:<sup>*</sup>
+                    <input id="patientID" placeholder="xxxxxx" required>
+                </label>
+                <button id="search" onclick="clicked()">search</button>
             </div>
-            <div >
-            <table style="width:80%">
-                <tr id="table1">
-                    <th>Test Names</th>
-                    <th>Test Values</th>
-                    <th>Normal Values</th>
-                </tr>
-                <tr>
-                    <td>Test 1</td>
-                    <td><input type="text" placeholder="normal value" id="test1" class="input"></td>
-                    <td><input type="text" placeholder="normal value" id="normalvalue1" class="input" readonly></td>
-                </tr>
-                <tr>
-                    <td>Test 2</td>
-                    <td><input type="text" placeholder="normal value" id="test2" class="input"></td>
-                    <td><input type="text" placeholder="normal value" id="normalvalue2" class="input" readonly></td>
-                </tr>
-                <tr>
-                    <td>Test 3</td>
-                    <td><input type="text" placeholder="normal value" id="test3" class="input"></td>
-                    <td><input type="text" placeholder="normal value" id="normalvalue3" class="input" readonly></td>
-                </tr>
-                <tr>
-                    <td>Test 4</td>
-                    <td><input type="text" placeholder="normal value" id="test4" class="input"></td>
-                    <td><input type="text" placeholder="normal value" id="normalvalue4" class="input" readonly></td>
-                </tr>
-            </table>
-        </div class="buttons">
-            <button type="button" class="buttont spacing">Reset</button>
-            <button type="button" class="buttont spacing" >Preview</button>
-            <button type="button" class="buttont spacing" >Save</button>
+            <div id="layouthidden">
+            <div class="tableDiv">
+                <table id="searchResult" class="newtable">
+                    <tr>
+                        <th>Test Cases</th>
+                    </tr>
+                </table>
+            </div>
+            </div>
+            <div class="buttonContainer" id="buttonContainer">
+                <button class="button centeralign" id="reset">Reset</button>
+                <button class="button centeralign" id="view" onclick="viewclicked()">View</button>
+            </div>
         </section>
     </section>
+    <aside>
+    </aside>
     <footer>
         <p> Diagnostics Lab</p>
     </footer>
+    <script>
+    document.getElementById("searchResult").style.visibility = "hidden";
+    var test = {
+        "testcase": [{
+            "testname": "Blood Test"
+        }, {
+            "testname": "Urine Test"
+        }, {
+            "testname": "White Blood Cells Test"
+        }, {
+            "testname": "Culture Test"
+        }, {
+            "testname": "1 hour Glucose Test"
+        }, {
+            "testname": "3 hours Glucose Test"
+        }]
+    };
+var selected=false;
+    var text = test.testcase;
+
+    function clicked() {
+        var patientID, testcase;
+        patientID = document.getElementById("patientID");
+
+        if (patientID.value === "") {
+            document.getElementById("error").innerHTML = "Enter patientID";
+            addClass("#patientID", 'error');
+        } else {
+            removeClass("#patientID", 'error');
+            document.getElementById('error').innerHTML = "";
+            myFunction();
+        }
+    };
+
+    function viewclicked() {
+           var id = $('#PatientID').val();
+            if (id == "" || id==undefined && !selected) {
+                event.preventDefault();
+                $("#error").html("Please Enter the Patient Id to View Test Results");
+                return;
+            } else {
+            $('#layouthidden').css('visibility', 'visible');
+            }
+    	if(selected){
+        window.location.href = 'enteringtestresult.html';
+    }else{
+    	$('#error').html="Please Set the Test Case";
+    }
+    };
+
+    function myFunction() {
+        document.getElementById("searchResult").style.visibility = "visible";
+        text.forEach(function(i) {
+            var table = document.getElementById("searchResult");
+            console.log(i.testname);
+            var newrow = table.insertRow(1);
+            var cell = newrow.insertCell(0);
+            // cell.innerHTML = text[i.testname];
+            cell.innerHTML = i.testname;
+            // cell.className="dynamic";
+            console.log(text[i.testname]);
+        });
+    }
+    $(document).ready(function() {
+        // alert("jquery load");
+        var table = $('#searchResult');
+        $("#searchResult tbody").delegate('tr', 'click', function(event) {
+var current=$(this).addClass('selected');
+        	$(this).parent("tbody").find("tr").removeClass('selected')
+        	current.parent("tbody").find("tr").removeClass('selected')
+        	$(this).addClass('selected');
+        	selected=true;
+        });
+
+        $("#reset").click(function() {
+            $('#searchResult').css('visibility', 'hidden');
+$('buttonContainer').css('visibility', 'hidden');
+            $('#patientID').val('')
+            selected=false;
+        });
+        $('#patientID').click(function(){
+            $('#error').html(" ");
+        });
+
+        $('#search').click(function(event) {
+            var id = $('#PatientID').val();
+            if (id == "") {
+                event.preventDefault();
+                $("#error").html("Please Enter the Patient Id to View Test Results");
+                return;
+            } else {
+            $('#layouthidden').css('visibility', 'visible');
+            }
+        });
+    });
+    </script>
+    <script type="text/javascript" src="js/lib.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </body>
 
 </html>
