implementation of patient views

--- a/patientDashboard.html
+++ b/patientDashboard.html
@@ -4,6 +4,8 @@
     <title>DiagnosticsLab</title>
         <link rel="stylesheet" href="stylesheet.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="js/util.js"></script>
 
 </head>
 <body class="padding">
@@ -15,7 +17,7 @@
     <h1 class="header">Diagnostics Lab</h1>
     </div>
     <div class="buttons">
-    <a href="home.html">
+    <a href="login.html">
     <button class="button">Log Out</button></a>
     </div>
 </header>
@@ -23,33 +25,22 @@
 <div class="runner">
 </div>
 </section>
-<section class="patient_dashboard">
-<section class="menu">
-    <a class="menuChoice" href="#">Menu Element 1</a>
-    <hr>
-    <a class="menuChoice" href="#">Menu Element 2</a>
-    <hr>
-    <a class="menuChoice" href="#">Menu Element 3</a>
-</section>
-<section class="report">
-    <div class="reports" id="report1"><a href="patientView.html">Report 1</a></div>
-    <div class="reports" id="report2"><a href="patientView.html">Report 2</a></div>
-    <div class="reports" id="report3"><a href="patientView.html">Report 3</a></div>
-</section>
-<section class="right">
-    <div class="rights" id="promotion">Promotions</div>
-    <hr>
-    <div class="rights" id="information">Informations</div>
-    <hr>
-    <div class="rights" id="Ads">Ads</div>
-</section>
+<section class="contents">
+<nav class="navigation">
+<ul>
+<li><a href="tech-viewhome.html">Home</li>
+<li><a href="viewTestResult.html">View Test Result</a></li>
+</ul>
+</nav>
+<section class="techcontents">
+    <ul>
+<li><a href="patientview.html">View Test Result</a></li>
+</ul>
 
 </section>
-<div>
+</section>
 <footer>
 <p> Diagnostics Lab</p>
 </footer>
-</div>
-</script>>
 </body>
 </html>
