--- a/patientView.html
+++ b/patientView.html
@@ -1,58 +1,129 @@
-<!DOCTYPE html>
 <!Doctype html>
 <html>
+
 <head>
     <title>DiagnosticsLab</title>
-        <link rel="stylesheet" href="stylesheet.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/util.js"></script>
 </head>
-<body class="padding">
-<header>
-    <div class="logo">
-    <img class="img" src="img/Icon.jpg">
-    </div>
-    <div >
-    <h1 class="header">Diagnostics Lab</h1>
-    <h2 class="header"></h2>
-    </div>
-    <div class="buttons">
-    <a href="home.html">
-    <button class="button">Log Out</button></a>
-    </div>
-</header>
-<section>
-<div class="runner">
-</div>
-</section>
-<section class="patient_dashboard">
-<section class="menu">
-    <a class="menuChoice" href="#">Menu Element 1</a>
-    <hr>
-    <a class="menuChoice" href="#">Menu Element 2</a>
-    <hr>
-    <a class="menuChoice" href="#">Menu Element 3</a>
-</section>
-<section class="report">
- 	<div id = "reportTitle"><h3>Report</h3></div>
- 	<div id = "reportContent">
- 	</div>
- 	<div id="back"><a href="patientDashboard.html">BACK</a></div>
-</section>
-<section class="right">
-    <div class="rights" id="promotion">Promotions</div>
-    <hr>
-    <div class="rights" id="information">Informations</div>
-    <hr>
-    <div class="rights" id="Ads">Ads</div>
-</section>
 
-</section>
-<div>
-<footer>
-<p> Diagnostics Lab</p>
-</footer>
-</div>
-</script>>
+<body class="padding">
+    <header>
+        <div class="logo">
+            <img class="img" src="img/Icon.jpg">
+        </div>
+        <div>
+            <h1 class="header">Diagnostics Lab</h1>
+
+        </div>
+        <div class="buttons">
+            <a href="login.html">
+                <button class="button">Log Out</button>
+            </a>
+        </div>
+    </header>
+    <section>
+        <div class="runner">
+        </div>
+    </section>
+    <section class="contents">
+        <nav class="navigation">
+            <ul>
+                <li><a href="tech-viewhome.html">Home</li>
+<li><a href="Registernewpatient.html">Register New Patient</a></li>
+                <li><a href="viewTestResult.html">View Test Result</a></li>
+                <li><a href="entertestresult.html">Enter Test Result</a></li>
+                <li><a href="CreatingTestCase.html">Order New Test</a></li>
+            </ul>
+        </nav>
+        <section class="techcontents">
+            <div id="error" class="errortext"></div>
+            <div class="paitentInfo">
+                <label>Patient ID:
+                    <input id="patientID" value="xxxuuuu" readonly>
+                </label>
+            </div>
+
+            <div class="tableDiv">
+                <table id="searchResult" class="newtable">
+                    <tr>
+                        <th>Test Cases</th>
+                    </tr>
+                </table>
+            </div>
+            </div>
+            <div class="buttonContainer" id="buttonContainer">
+                <button class="button centeralign" id="create" onclick="viewclicked()">View</button>
+            </div>
+        </section>
+
+    <footer>
+        <p> Diagnostics Lab</p>
+    </footer>
+    <script>
+    // document.getElementById("searchResult").style.visibility = "hidden";
+    var test = {
+        "testcase": [{
+            "testname": "Blood Test"
+        }, {
+            "testname": "Urine Test"
+        }, {
+            "testname": "White Blood Cells Test"
+        }, {
+            "testname": "Culture Test"
+        }, {
+            "testname": "1 hour Glucose Test"
+        }, {
+            "testname": "3 hours Glucose Test"
+        }]
+    };
+var selected=false;
+   var text = test.testcase;  
+function viewclicked() {
+        if(selected){
+        window.location.href = 'testview.html';
+    }else{
+        $('#error').html="Please Select the Test Case";
+    }
+    };
+
+    $(document).ready(function() {
+
+         text.forEach(function(i) {
+            var table = document.getElementById("searchResult");
+            console.log(i.testname);
+            var newrow = table.insertRow(1);
+            var cell = newrow.insertCell(0);
+            // cell.innerHTML = text[i.testname];
+            cell.innerHTML = i.testname;
+            // cell.className="dynamic";
+            console.log(text[i.testname]);
+        });
+        
+        // alert("jquery load");
+        var table = $('#searchResult');
+        $("#searchResult tbody").delegate('tr', 'click', function(event) {
+var current=$(this).addClass('selected');
+            $(this).parent("tbody").find("tr").removeClass('selected')
+            current.parent("tbody").find("tr").removeClass('selected')
+            $(this).addClass('selected');
+            selected=true;
+        });
+
+        $('#search').click(function(event) {
+            var id = $('#PatientID').val();
+            if (id == "") {
+                event.preventDefault();
+                $("#error").html("Please Enter the Patient Id to View Test Results");
+                return;
+            } 
+        });
+    });
+    </script>
+    <script type="text/javascript" src="js/lib.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </body>
+
 </html>
