--- a/CreatingTestCase.html
+++ b/CreatingTestCase.html
@@ -9,19 +9,18 @@
 
 </head>
 <body class="padding">
-<header>
-    <div class="logo">
-        <img class="img" src="img/Icon.jpg">
-    </div>
-    <div >
-        <h1 class="header">Diagnostics Lab</h1>
-    </div>
-    <div class="buttons">
-    <a href="login.html">
-        <button class="button">Log out</button>
-    </a>
-    </div>
-</header>
+    <header>
+        <div class="logo">
+            <img class="img" src="img/Icon.jpg">
+            <h1 class="header">Diagnostics Lab</h1>
+        </div>
+        <div class="buttons">
+            <button class="button">Logout</button>
+           <!--  <a href="signup.html">
+                <button class="button secondary">Sign Up</button>
+            </a> -->
+        </div>
+    </header>
 <section>
 <div class="runner">
 </div>
