--- a/patientView.html
+++ b/patientView.html
@@ -13,15 +13,13 @@
     <header>
         <div class="logo">
             <img class="img" src="img/Icon.jpg">
-        </div>
-        <div>
             <h1 class="header">Diagnostics Lab</h1>
-
         </div>
         <div class="buttons">
-            <a href="login.html">
-                <button class="button">Log Out</button>
-            </a>
+            <button class="button">Logout</button>
+           <!--  <a href="signup.html">
+                <button class="button secondary">Sign Up</button>
+            </a> -->
         </div>
     </header>
     <section>
