--- a/signup.html
+++ b/signup.html
@@ -8,20 +8,20 @@
 </head>
 
 <body class="padding">
-<header>
-	<div class="logo">
-	<img class="img" src="img/Icon.jpg">
-	</div>
-	<div >
-	<h1 class="header">Diagnostics Lab</h1>
-	</div>
-	<div class="buttons">
-	<a href="login.html">
-	<button class="button">Login</button></a>
-	
-	<button class="button">Sign Up</button>
-	</div>
-</header>
+ <header>
+        <div class="logo">
+            <img class="img" src="img/Icon.jpg">
+            <h1 class="header">Diagnostics Lab</h1>
+        </div>
+        <div class="buttons">
+        <a href="login.html">
+            <button class="button">Login</button>
+        </a>
+          <!--   <a href="signup.html">
+                <button class="button secondary">Sign Up</button>
+            </a> -->
+        </div>
+    </header>
     <section>
         <div class="runner">
         </div>
@@ -75,7 +75,7 @@
                             <input type="radio" name="selection" id="patient" checked>Patient</input>
                         </div>
                         <div>
-                            <button type="submit">Sign Up</button>
+                            <button type="submit" onclick="getchecked()">Sign Up</button>
                         </div>
                     </div>
                 </fieldset>
@@ -88,6 +88,12 @@
 
     <script type="text/javascript" src="js/lib.js"></script>
     <script type="text/javascript">
+    function getchecked(){
+        if (document.getElementById('selection').checked) {
+var selection = document.getElementById('selection');
+alert(selection);
+    }
+};
     function comparePassword() {
         var primepassword, secondpassword;
         primepassword = document.getElementById("password");
@@ -102,6 +108,7 @@
         }
     }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </body>
 
 </html>
